# ProjectPlugIn

./: CLAUDE.md  CMakeLists.txt  JUCE  README.md
Source/: OutputStage.cpp  OutputStage.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  VocoderBand.cpp  VocoderBand.h  VocoderEngine.cpp  VocoderEngine.h
mockup/: gui_mockup.html
